force-app/main/default/objects/Google_Tasklist__c/Google_Tasklist__c.object-meta.xml
<CustomObject>
    <description>Used to store Google Tasklist Title</description>
    <label>Google Tasklist</label>
    <nameField>
        <label>Tasklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Tasklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>