force-app/main/default/objects/Google_Tasklist__c/fields/Synced__c.field-meta.xml
<CustomField>
    <fullName>Synced__c</fullName>
    <description>It is false for the records which has no Tasklist Id and true for the records which has Tasklist Id</description>
    <formula>IF(ISBLANK( TasklistId__c ), false, true)</formula>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>