force-app/main/default/objects/Google_Tasklist__c/fields/TasklistId__c.field-meta.xml
<CustomField>
    <fullName>TasklistId__c</fullName>
    <description>Used to store Id of the Google Tasklist(ReadOnly)</description>
    <label>TasklistId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>