force-app/main/default/objects/Google_Tasklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TasklistId__c</columns>
    <columns>Synced__c</columns>
    <columns>Deleted__c</columns>
    <columns>Selflink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tasklists</label>
</ListView>