force-app/main/default/objects/Google_Tasklist__c/listViews/Deleted_Tasklists.listView-meta.xml
<ListView>
    <fullName>Deleted_Tasklists</fullName>
    <columns>NAME</columns>
    <columns>TasklistId__c</columns>
    <columns>Synced__c</columns>
    <columns>Deleted__c</columns>
    <columns>Selflink__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deleted Tasklists</label>
</ListView>