force-app/main/default/objects/Google_Tasklist__c/listViews/Unsynced_Tasklist.listView-meta.xml
<ListView>
    <fullName>Unsynced_Tasklist</fullName>
    <columns>NAME</columns>
    <columns>TasklistId__c</columns>
    <columns>Synced__c</columns>
    <columns>Selflink__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unsynced Tasklists</label>
</ListView>